[package]
name = "soft"
version = "0.1.0"
edition = "2018"
authors = ["Fabian Bösiger <boesiger.fabian@outlook.com>"]
description = "Provides soft, non-panicking assertions."
keywords = ["assert", "soft", "soft assert", "panic"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fabianboesiger/soft"