[package]
name = "soft"
version = "0.1.1"
edition = "2018"
authors = ["Fabian Bösiger <boesiger.fabian@outlook.com>"]
description = "Provides soft, non-panicking assertions."
keywords = ["assert", "assertions", "soft", "panic", "result"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fabianboesiger/soft"